edit width of directors images to avoid blurring

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -377,7 +377,7 @@ input {
 .single-director img {
   max-height: 300px;
   height: auto;
-  width: 90%;
+  width: 65%;
   padding: 10px;
 }
 
